@@ -27,9 +27,9 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.6.0'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.8'
-    compile 'org.springframework:spring-beans:5.1.7.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.7.RELEASE'
+    compile 'org.apache.httpcomponents:httpclient:4.5.9'
+    compile 'org.springframework:spring-beans:5.1.8.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.8.RELEASE'
     compile 'com.io7m.xom:xom:1.2.10'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
 
